--- a/pace_disarmo_cooperazione.html
+++ b/pace_disarmo_cooperazione.html
@@ -124,7 +124,7 @@
     <div class="col-md-12 column">
       <div class="jumbotron">
       
-        <div class="page-header"><h1>
+        <div class="page-header"><h1 class="cooperazione">
           <span class="fa-stack fa-4x cooperazione">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="icon-noun_122924_cc fa-stack-1x fa-inverse"></i>
