nascosta infografica di sezione

--- a/fisco_finanza.html
+++ b/fisco_finanza.html
@@ -191,7 +191,7 @@
    </div>
   <div class="row clearfix">
         <div class="col-md-12 column">
- <img src="./img/infografica_fisco.png">     
+ <!-- <img src="./img/infografica_fisco.png">     -->
 </div>
 </div>
    <hr>
