--- a/index.html
+++ b/index.html
@@ -206,17 +206,17 @@
     </div>
   
 </div>		
+</div>
 
 <hr>
 <footer>
  <p class="text-center" >
     <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" alt="Logo Sbilanciamoci" /></a>.
-Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target="_blank"><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
-</p>
+
 </footer>
 
-</div>
 
 
 </body>
