--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
             <br>
             <div class="col-md-4 column">
                
-               <a href="/infografica.html">  <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></a>
+               <a href="./infografica.html">  <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></a>
                 <h2> <a href="/infografica.html"> Infografica</a></h2>
             </div>     <div class="col-md-4 column">
                 
-            <a href="/analisi_e_dati.html">  <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-pie-chart fa-stack-1x fa-inverse"></i></span></a>
-                <h2> <a href="/analisi_e_dati.html"> Analisi e dati</a></h2>
+            <a href="./analisi_e_dati.html">  <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-pie-chart fa-stack-1x fa-inverse"></i></span></a>
+                <h2> <a href="./analisi_e_dati.html"> Analisi e dati</a></h2>
             </div>
             <div class="col-md-4 column">
               <p class="valdesi">Il Rapporto <strong>Sbilanciamoci!</strong> 2016 è stato realizzato con il contributo di:</p>  
