Modifiche titoli grafici

--- a/analisi_e_dati.html
+++ b/analisi_e_dati.html
@@ -198,7 +198,7 @@ Sul versante delle <strong>uscite</strong>: un intervento pubblico forte in camp
 <p class="grafico">Spesso si sostiene che l’Italia ha un sistema sanitario troppo “pesante”. A giudicare dal numero di posti letto ospedalieri ogni centomila abitanti sembrerebbe proprio di no: in Italia sono 342 rispetto agli 818 della Germania, ai 634 della Francia e ai 515 della media europea a 28 paesi.</p>
 <h4 class="grafico">Posti letto per 100.00 abitanti. Anno 2012</b></h4>
 <img src="./grafici/grafico5.png" alt="..e si lavora tanto" width=100%>
-<h3><b>...si spende poco per la sanità pubblica</b></h3>
+<h3>...la spesa sanitaria non è poi così alta rispetto agli altri paesi</h3>
 <p class="grafico">Uno dei luoghi comuni più diffusi è che la spesa sanitaria italiana è molto più alta rispetto a quella degli altri paesi europei. Ma secondo l’Ocse nel 2012 la spesa media sanitaria per abitante italiana è molto più bassa (2.481 dollari) rispetto a quella di altri paesi considerati virtuosi come i Paesi Bassi (4.375 dollari), l’Austria (3.716 dollari), la Germania (3.691 dollari) o il Regno Unito (2.762 dollari)</p>.
 <h4 class="grafico">Spesa sanitaria pubblica in alcuni paesi europei. Anno 2012 (dollari per abitante in parità di potere d’acquisto)</h4>
 <img src="./grafici/grafico6.png" alt="Spesa sanitaria pubblica in alcuni paesi europei - Anno 2012 (dollari per abitante in parità di potere d’acquisto)" width=100%>
@@ -230,7 +230,7 @@ Sul versante delle <strong>uscite</strong>: un intervento pubblico forte in camp
 <h4 class="grafico"><b>Autovetture nei paesi UE per 1.000 abitanti. Anno 2012</b></h4>
 <img src="./grafici/grafico11.png" alt="Autovetture nei paesi UE per 1.000 abitanti. Anno 2012" width=100%>
 <i>Fonte: Istat - Noi Italia</i>
-<h3 class="grafico">..e tutto in discarica</h3>
+<h3 class="grafico"> e ancora troppi rifiuti in discarica</h3>
 <p class="grafico">Riduzione della produzione, raccolta differenziata e riciclo dei rifiuti sono in buona parte del territorio Italiano ancora un obiettivo lontano. Quasi la metà 212 kg dei circa 491 kg rifiuti prodotti per abitante è ancora smaltita nelle discariche rispetto ai 3 kg della Germania e della Svezia, ai 5 del Belgio, agli 8 dei Paesi Bassi, ai 17 della Danimarca e ai 18 dell’Austria.</p>
 <h4 class="grafico">Rifiuti urbani smaltiti in discarica nei paesi UE. Anno 2012 (kg per abitante)</h4>
 <img src="./grafici/grafico11.png" alt="Rifiuti urbani smaltiti in discarica nei paesi UE. Anno 2012 (kg per abitante)" width=100%>
