--- a/analisi_e_dati.html
+++ b/analisi_e_dati.html
@@ -230,7 +230,7 @@ Sul versante delle <strong>uscite</strong>: un intervento pubblico forte in camp
 <h4 class="grafico"><b>Autovetture nei paesi UE per 1.000 abitanti. Anno 2012</b></h4>
 <img src="./grafici/grafico11.png" alt="Autovetture nei paesi UE per 1.000 abitanti. Anno 2012" width=100%>
 <i>Fonte: Istat - Noi Italia</i>
-<h3 class="grafico"> e ancora troppi rifiuti in discarica</h3>
+<h3 class="grafico">...e ancora troppi rifiuti in discarica</h3>
 <p class="grafico">Riduzione della produzione, raccolta differenziata e riciclo dei rifiuti sono in buona parte del territorio Italiano ancora un obiettivo lontano. Quasi la metà 212 kg dei circa 491 kg rifiuti prodotti per abitante è ancora smaltita nelle discariche rispetto ai 3 kg della Germania e della Svezia, ai 5 del Belgio, agli 8 dei Paesi Bassi, ai 17 della Danimarca e ai 18 dell’Austria.</p>
 <h4 class="grafico">Rifiuti urbani smaltiti in discarica nei paesi UE. Anno 2012 (kg per abitante)</h4>
 <img src="./grafici/grafico11.png" alt="Rifiuti urbani smaltiti in discarica nei paesi UE. Anno 2012 (kg per abitante)" width=100%>
@@ -248,7 +248,7 @@ Sul versante delle <strong>uscite</strong>: un intervento pubblico forte in camp
 <footer>
  <p class="text-center" >
   <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
-Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distribuiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
 
