--- a/infografica.html
+++ b/infografica.html
@@ -135,7 +135,8 @@
       <div class="row clearfix">
         <div class="col-md-12 column">
 <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1144px; height: 819px;'><noscript><a href='#'><img alt='La controfinanziaria di SBILANCIAMOCI!: dove trovare 35 miliardi di Euro e dove metterli ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey7&#47;SankeyflussiControfinanziaria&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1144' height='819' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='sankey7&#47;SankeyflussiControfinanziaria' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey7&#47;SankeyflussiControfinanziaria&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
-     </div>
+     <p class="text-center" ><strong>Infografica realizzata da Marianna Cosseddu</strong>
+</p></div>
 
    </div>
 
@@ -143,7 +144,7 @@
 <footer>
  <p class="text-center" >
   <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
-Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distribuiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
 
