--- a/infografiche.html
+++ b/infografiche.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8">
 	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
-  <meta name="author" content="Ondata">
-  <meta property="og:image" content="http://ondata.github.io/sbilanciamoci-manovra2016/images/bgsbil2.jpg" />
+   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
+  <meta name="author" content="Sbilanciamoci, Marianna Cosseddu, Ondata.it">
   <meta property="og:title" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente" />
-
+  <meta property="og:image" content="http://controfinanziaria.sbilanciamoci.org/images/sbilanciamoci_rapporto_2016.jpg" />
+<meta property="og:type" content="website" />
 
   <!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
   <!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
@@ -73,61 +73,59 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> 
-          <!--
-          <a class="navbar-brand logo" href="./index.html">
-          <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
-          </a>
-        -->
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav">
-           <li >
-            <a href="./">Home</a>
-          </li>
-          <li class="active">
-            <a href="./focus-welfare.html" >Welfare e diritti</a>
-          </li>
-          <!--
-          <li>
-            <a href="./proponi.html">Proponi</a>
-          </li>
-          <li>
-            <a href="./griglia.html">Griglia</a>
-          </li>
-          <li>
-            <a href="./open.html">Open</a>
-          </li>
+              <ul class="nav navbar-nav dropdown">
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle"  data-toggle="dropdown" href="#">Proposte
+                        <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
+                                <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
+                                <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
+                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./welfare.html">Welfare e diritti</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./altra_economia.html">Altraeconomia</a></li> 
+                            </ul>
+                    <li class="active">
+                        <a href="./infografica.html">Infografica</a>
+<li >
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
+                    </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
-          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org</a>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
         </li>
-      -->
-    </ul>
-  </div>
+        </ul>  </div>
 </div>
 
-</nav>
-</div>
+</nav></div>
 </div>
 
 <div id="main" class="container">
   <div class="row clearfix">
     <div class="col-md-12 column">
       <div class="jumbotron">
-        <br>
         <div class="page-header">
           <h1>
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
           </span> 
-          Infografiche
+          Infografica
           </h1>
-        </div><br>
-          <p class="lead">I <strong>diritti socialis non sono un lusso né una merce</strong>. Per contrastare le scelte di privatizzazione in corso da tempo, Sbilanciamoci! propone di integrare il Fondo Nazionale Politiche Sociali (1,164 miliardi) per riportarlo ai livelli del 2008, impiegare le risorse stanziate per il bonus bebè per ridurre le rette degli asili nido pubblici (costo zero), integrare il Fondo per la non autosufficienza (<mark>350 milioni</mark>) e quello per l’infanzia (<mark>15,2 milioni</mark>), varare misure per l’invecchiamento attivo (1 milione) e per l’inclusione attiva delle persone con disabilità (<mark>50 milioni</mark>). L’inserimento sociale dei detenuti potrebbe avvenire a costo zero. litiche di welfare generali, l’ondata di razzismo che sta travolgendo di nuovo il nostro paese.</p>
+        </div><p>L’infografica sottostante illustra in modo dinamico le proposte del Rapporto Sbilanciamoci! 2016. Sulla sinistra sono rappresentate le fonti di finanziamento attraverso le quali Sbilanciamoci! propone di finanziare le proposte di spesa illustrate nella parte destra dell’infografica.
+</p><p>I flussi centrali congiungono la colonna delle entrate e quella delle uscite evidenziando la destinazione delle risorse. Facendo scorrere il mouse sulle linee centrali è possibile inoltre visualizzare la destinazione delle diverse risorse reperite per ciascuna area tematica. L’ultima sezione a destra dell’infografica riepiloga in entrata e in uscita le proposte di Sbilanciamoci! per ciascuna area tematica.</p>
+
           </div>
         </div>
 
@@ -136,18 +134,19 @@
 
       <div class="row clearfix">
         <div class="col-md-12 column">
-        <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 819px;'><noscript><a href='#'><img alt='La controfinanziaria di SBILANCIAMOCI!: dove trovare 27 miliardi e dove metterli ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey1&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='100%' height='819' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='path' value='views&#47;sankey1&#47;Dashboard1' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey1&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
-        </div>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1144px; height: 819px;'><noscript><a href='#'><img alt='La controfinanziaria di SBILANCIAMOCI!: dove trovare 35 miliardi di Euro e dove metterli ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey7&#47;SankeyflussiControfinanziaria&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1144' height='819' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='sankey7&#47;SankeyflussiControfinanziaria' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey7&#47;SankeyflussiControfinanziaria&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
      </div>
 
    </div>
 
    <hr>
-   <footer>
-     <p class="text-center" >
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Petrusino</span> di<a xmlns:cc="http://creativecommons.org/ns#" href="http://opendatasicilia.it" property="cc:attributionName" rel="cc:attributionURL"> Open Data Sicilia</a> è distribuito con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
-    </p>
-  </footer>
+<footer>
+ <p class="text-center" >
+  <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>.
+Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>.  </p><p class="text-center" ><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="alignleft" alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> I contenuti sono distribuiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+</p>
+</footer>
+
 
 </div>
 <script>
