--- a/tutte.html
+++ b/tutte.html
@@ -152,10 +152,10 @@
 
 <div id="scaricatab">
                 <span class="fa-stack">
-                  <a href="/rapporto2016/Tavola_Finale_Rapporto_Sbilanciamoci_2016.jpg"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <a href="./rapporto2016/Tavola_Finale_Rapporto_Sbilanciamoci_2016.jpg"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
              
-                <a href="/rapporto2016/Tavola_Finale_Rapporto_Sbilanciamoci_2016.jpg" style="text-decoration: none" class="scarica">Scarica la tavola finale delle proposte di Sbilanciamoci! per il 2016</a>
+                <a href="./rapporto2016/Tavola_Finale_Rapporto_Sbilanciamoci_2016.jpg" style="text-decoration: none" class="scarica">Scarica la tavola finale delle proposte di Sbilanciamoci! per il 2016</a>
             </div>  
  
 
