--- a/welfare.html
+++ b/welfare.html
@@ -142,10 +142,10 @@ e la xenofobia. Rispetto agli indirizzi del Ddl di Stabilità, Sbilanciamoci! pr
           </div>
 <div id="scaricatab">
                 <span class="fa-stack">
-                  <a href="/rapporto2016/welfareediritti.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <a href="./rapporto2016/welfareediritti.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
              
-                <a href="/rapporto2016/welfareediritti.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Welfare e Diritti</a>
+                <a href="./rapporto2016/welfareediritti.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Welfare e Diritti</a>
             </div>   
 
 
