--- a/altra_economia.html
+++ b/altra_economia.html
@@ -141,10 +141,10 @@
           </div>
 <div id="scaricatab">
                 <span class="fa-stack">
-                  <a href="/rapporto2016/altraeconomia.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <a href="./rapporto2016/altraeconomia.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
              
-                <a href="/rapporto2016/altraeconomia.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Altraeconomia</a>
+                <a href="./rapporto2016/altraeconomia.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Altraeconomia</a>
             </div> 
   
         </div>
