--- a/ambiente.html
+++ b/ambiente.html
@@ -138,10 +138,10 @@
 
 <div id="scaricatab">
                 <span class="fa-stack">
-                  <a href="/rapporto2016/ambiente.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <a href="./rapporto2016/ambiente.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
              
-                <a href="/rapporto2016/ambiente.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Ambiente e sviluppo sostenibile</a>
+                <a href="./rapporto2016/ambiente.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Ambiente e sviluppo sostenibile</a>
             </div>  
  
 
