--- a/cultura_conoscenza.html
+++ b/cultura_conoscenza.html
@@ -137,10 +137,10 @@
           </div>
    <div id="scaricatab">
                 <span class="fa-stack">
-                  <a href="/rapporto2016/culturaeconoscenza.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <a href="./rapporto2016/culturaeconoscenza.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
              
-                <a href="/rapporto2016/culturaeconoscenza.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cultura e conoscenza</a>
+                <a href="./rapporto2016/culturaeconoscenza.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Cultura e conoscenza</a>
             </div>   
 </div>
 
