--- a/lavoro_reddito.html
+++ b/lavoro_reddito.html
@@ -136,10 +136,10 @@
           </div>
  <div id="scaricatab">
                 <span class="fa-stack">
-                  <a href="/rapporto2016/lavoroereddito.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <a href="./rapporto2016/lavoroereddito.pdf"> <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-download  fa-stack-1x fa-inverse"></i></span></a> 
              
-                <a href="/rapporto2016/lavoroereddito.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Lavoro e reddito</a>
+                <a href="./rapporto2016/lavoroereddito.pdf" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Lavoro e reddito</a>
             </div> 
              
         </div>
